Fixed CSS formatting issue for buttons being too tall

--- a/views/style.css
+++ b/views/style.css
@@ -9,7 +9,6 @@ h4 {
 }
 button {
     width: 200%;
-    height: 200%;
 }
 textarea {
     font-size: 1.7em;
